tests/snapshots/options__opt_header_lines_reverse.snap
---
source: tests/options.rs
expression: buf + & cursor_pos
---
">                                                                               "
"  2/2                                                                        0/0"
"  a                                                                             "
"> b                                                                             "
"  c                                                                             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
cursor: (2, 0)
