tests/snapshots/options__opt_header_only@001.snap
---
source: tests/options.rs
description: "input: items [\"a\", \"b\", \"c\"]\noptions: --header test_header"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  c                                                                             "
"  b                                                                             "
"> a                                                                             "
"  test_header                                                                   "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
